fixed scrollbar ios bug and spinner

--- a/src/components/cart dropdown/style.scss
+++ b/src/components/cart dropdown/style.scss
@@ -13,11 +13,9 @@
 
   .cart-items {
     height: 240px;
-    display: flex;
-    flex-direction: column;
     overflow: scroll;
-    // overflow-x: hidden;
-    // scrollbar-width: none
+    overflow-x: hidden;
+    scrollbar-width: none;
   }
 
   .message {
